# taler-python

./: LICENSE.txt  README.md  pyproject.toml  smoke_test.py
src/taler_python/: __about__.py  errors.py  version.py
src/taler_python/clients/: merchant.py
src/taler_python/types/: common.py
tests/: __init__.py  test_errors.py  test_merchant.py  test_version.py
